update meetings 17 and 18

--- a/meeting_agendas/17_bayes_inference_regression_30mar20.Rmd
+++ b/meeting_agendas/17_bayes_inference_regression_30mar20.Rmd
@@ -37,6 +37,8 @@ saveRDS(reg_data, "data/exam_reg_data.rds")
 ```{r, accessibleCode}
 reg_data <- readRDS("data/exam_reg_data.rds")
 
+str(reg_data)
+
 ### explore numerically
 head(reg_data)
 summary(reg_data)
